add citymaker 插件及 首页展示三维模型

--- a/app/index.html
+++ b/app/index.html
@@ -8,4 +8,7 @@
 	<body>
 		<div id="app"></div>
 	</body>
+	<script type="text/javascript" src="../citymaker/cm7.js"></script>
+	<script type="text/javascript" src="../citymaker/cm7_sample_util.js"></script>
+	<script type="text/javascript" src="../citymaker/cm7_sample_util_globe.js"></script>
 </html>
